tests/compile_fail/void_return_value.olrn
fn bad()
{
    ret 42
}

fn main() -> void
{
    bad()
}
